--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <title>Tutorial on Js</title>
 <body>
-    <h1>Console Logs in javascript</h1>
+    <h1>Javascript Tutorial</h1>
 </body>
 <!-- <script src="js/console-logs.js"></script>
 <script src="js/variables.js"></script>
 <script src="js/Data-types.js"></script> -->
 <!-- <script src="js/Type-conversion.js"></script> -->
 <!-- <script src="js/type-coercion.js"></script> -->
-<script src="js/Properties-methods.js"></script>
+<!-- <script src="js/Properties-methods.js"></script> -->
+<script src ="js/Arrays.js"></script>
 </html>
