--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <!-- <script src="js/Type-conversion.js"></script> -->
 <!-- <script src="js/type-coercion.js"></script> -->
 <!-- <script src="js/Properties-methods.js"></script> -->
-<script src ="js/Arrays.js"></script>
+<!-- <script src ="js/Arrays.js"></script> -->
+<!-- <script src="js/If-Else.js"></script> -->
+<script src="js/Loops.js"></script>
 </html>
