--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <!-- <script src="js/Properties-methods.js"></script> -->
 <!-- <script src ="js/Arrays.js"></script> -->
 <!-- <script src="js/If-Else.js"></script> -->
-<script src="js/Loops.js"></script>
+<!-- <script src="js/Loops.js"></script> -->
+<script src ="js/Functions.js"></script>
 </html>
