--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Tutorial on Js</title>
+
 <body>
     <h1>Javascript Tutorial</h1>
 </body>
@@ -13,5 +14,8 @@
 <!-- <script src ="js/Arrays.js"></script> -->
 <!-- <script src="js/If-Else.js"></script> -->
 <!-- <script src="js/Loops.js"></script> -->
-<script src ="js/Functions.js"></script>
+<!-- <script src ="js/Functions.js"></script> -->
+<!-- <script src= "js/Window-object.js"></script> -->
+<script src="js/DOM.js"></script>
+
 </html>
