--- a/website.html
+++ b/website.html
@@ -12,7 +12,7 @@
     <h1>Hello Javascript</h1>
     <a href="192.168.0.206:81/#/login">Control Room</a>
     <div class="container">
-        <h1 id= 'heading'>Hii Selector</h1>
+        <h1 id='heading' class="myclass">Hii Selector</h1>
         <ul class="hello" id='this1'>
             <li class="ui" id='first'>This</li>
             <li class="ui">is</li>
@@ -20,13 +20,15 @@
             <li class="ui">for</li>
             <li class="ui" id='last1'>Me</li>
         </ul>
-        <div class="child red" id='first'>Child 1</div>
-        <div class="child">Child 2</div>
+        <div class="child red" id='first'class='no'>Child 1</div>
+        <div class="child" class='hello'>Child 2</div>
         <div class="child">Child 3</div>
         <div class="child">Child 4</div>
-        <label for="fname">Search for website:</label>
-        <input type="text" name="FirstName">
-        <button type="submit">Submit</button>
+        <form action="none.html" method="post"><br>
+            Search for the website : <input type="text" name="hello" id="">
+            <input type="submit" id='btn' value="submit">
+            <button type="submit" id ='btn'>Submit Form</button>
+        </form>
     </div>
     <div class="no">div1</div>
     <div class="no">div2</div>
@@ -36,7 +38,12 @@
     <!-- <script src="js/Selectors.js"></script> -->
     <!-- <script src="js/DOM-1.js"></script> -->
     <!-- <script src="js/creating-removing.js"></script> -->
-    <script src= "js/Events.js"></script>
+    <!-- <script src= "js/Events.js"></script> -->
+    <!-- <script src="js/Events-2.js"></script> -->
+    <!-- <script src="js/webpage-crawler.js"></script> -->
+    <!-- <script src="js/local-storage.js"></script> -->
+    <!-- <script src="js/session-storage.js"></script> -->
+    <script src ="js/div1.js"></script>
 </body>
 
 </html>
